// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post schema markup service create Создает новую микроразметку 1`] = `
Object {
  "createdAt": 2021-09-08T12:30:35.000Z,
  "id": 1,
  "lastEditedAt": 2021-09-08T12:30:35.000Z,
  "markup": Array [
    Object {
      "mainEntity": Array [],
    },
  ],
  "postId": 1,
  "type": "faqPage",
}
`;

exports[`Post schema markup service update Обновляет микроразметку и возвращает обновленную модель 1`] = `
Object {
  "createdAt": 2021-09-08T12:30:35.000Z,
  "id": 1,
  "lastEditedAt": 2021-09-10T14:30:25.000Z,
  "markup": Array [
    Object {
      "mainEntity": Array [],
    },
  ],
  "postId": 1,
  "type": "faqPage",
}
`;
